--- a/style.css
+++ b/style.css
@@ -174,7 +174,13 @@ footer {
 }
 
 .rsschool__icon {
-    width: 70px;
-    height: 30px;
+    width: 100px;
+    height: 40px;
+    padding-right: 20px;
+}
+
+.github__icon {
+    width: 40px;
+    height: 40px;
 }
 
